css fixed pour leaderboard et scrollbar

--- a/src/frontend/vuejs/app/src/assets/main.css
+++ b/src/frontend/vuejs/app/src/assets/main.css
@@ -5,7 +5,6 @@
 *::after { 
     margin: 0;
     padding: 0;
-	overflow-x: hidden;
 }
 
 *, a {
